--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="application-name" content="BIRA HOST" />
     <meta name="apple-mobile-web-app-title" content="BIRA HOST" />
     <meta name="msapplication-starturl" content="/" />
-    <title>Vite + React + TS</title>
+    <title>Gityおしらせアプリ</title>
   </head>
   <body>
     <div id="root"></div>
