:lipstick: PDFViewerのオーバーフロー修正

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="application-name" content="BIRA HOST" />
-    <meta name="apple-mobile-web-app-title" content="BIRA HOST" />
+    <meta name="application-name" content="Gityおしらせアプリ" />
+    <meta name="apple-mobile-web-app-title" content="Gityおしらせアプリ" />
     <meta name="msapplication-starturl" content="/" />
     <title>Gityおしらせアプリ</title>
   </head>
