--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="msapplication-starturl" content="/" />
     <title>Gityおしらせアプリ</title>
   </head>
-  <body>
+  <body class="bg-wood">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
